--- a/index.html
+++ b/index.html
@@ -501,20 +501,20 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 			<div class="row">
 				<div class="col-md-3">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-1.jpg);">
+						style="background-image: url(images/carspectper.webp);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Busuiness Website</a></h3>
+							<h3><a href="https://carspector.de/">Busuiness Website</a></h3>
 							<span>Carspector</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-2.jpg);">
+						style="background-image: url(images/texlilink.webp);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">CRM for Business</a></h3>
+							<h3><a href="https://texilinkcrm.codebeter.com/">CRM for Business</a></h3>
 							<span>TexiLink</span>
 						</div>
 					</div>
@@ -522,10 +522,10 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 
 				<div class="col-md-3">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-2.jpg);">
+						style="background-image: url(images/xxeworkk.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">An animated business website</a></h3>
+							<h3><a href="https://xework.codebeter.com/">An animated business website</a></h3>
 							<span>Xe.Work</span>
 						</div>
 					</div>
@@ -533,10 +533,10 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 
 				<div class="col-md-3">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-2.jpg);">
+						style="background-image: url(images/jobportal.webp);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Job portal website</a></h3>
+							<h3><a href="https://jobportal.codebeter.com/">Job portal website</a></h3>
 							<span>Jb Portal</span>
 						</div>
 					</div>
@@ -719,7 +719,7 @@ Their feedback reflects our commitment to quality, trust, and client satisfactio
 
 	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
 		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
+			<div class="row justify-content-center mb-5 ">
 				<div class="col-md-8 heading-section text-center ftco-animate">
 					<span class="subheading">Contact us</span>
 					<h2 class="mb-4">Have a Project?</h2>
@@ -763,7 +763,7 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 				</div> -->
 
 				<div class="col-md-12 ">
-					<div class="row">
+					<div class="row mb-5">
 
 						<div class="col-4">
 							<div class="dbox d-flex">
