--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 		</div>
 	</section>
 
-	<section class="ftco-section testimony-section bg-primary">
+	<!-- <section class="ftco-section testimony-section bg-primary">
 		<div class="container">
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 heading-section heading-section-white text-center ftco-animate">
@@ -643,7 +643,7 @@ Their feedback reflects our commitment to quality, trust, and client satisfactio
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 <!-- 
 	<section class="ftco-section bg-light" id="blog-section">
@@ -717,7 +717,7 @@ Their feedback reflects our commitment to quality, trust, and client satisfactio
 		</div>
 	</section> -->
 
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+	<section class="ftco-section contact-section ftco-no-pb pt-0" id="contact-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 ">
 				<div class="col-md-8 heading-section text-center ftco-animate">
@@ -819,9 +819,8 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Lets talk about</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
-						<p><a href="#" class="btn btn-primary">Learn more</a></p>
+						<p>Delivering reliable, innovative, and scalable digital solutions to help businesses grow and succeed.</p>
+						<!-- <p><a href="#" class="btn btn-primary">Learn more</a></p> -->
 					</div>
 				</div>
 				<div class="col-md">
