--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Clyde - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Portfolio - website </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -61,8 +61,9 @@
 							<div class="text">
 								<span class="subheading">Hello! This is Hamza</span>
 								<h1 class="mb-4 mt-3">Creative <span>Website</span> Designer &amp; Developer</h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#"
-										class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="#contact-section" class="btn btn-primary">Hire me</a>
+									 <!-- <a href="#"
+										class="btn btn-primary btn-outline-primary">Download CV</a></p> -->
 							</div>
 						</div>
 					</div>
@@ -83,8 +84,10 @@
 							<div class="text">
 								<span class="subheading">We Design &amp; Build Websites</span>
 								<h1 class="mb-4 mt-3">Hi, I am <span>Hamza</span> This is my favorite work.</h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#"
-										class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="#contact-section" class="btn btn-primary">Hire me</a> 
+									
+									<!-- <a href="#"
+										class="btn btn-primary btn-outline-primary">Download CV</a></p> -->
 							</div>
 						</div>
 					</div>
@@ -478,7 +481,7 @@ Our focus is on quality, performance, and long-term value to help businesses gro
 						<h2>Have a project on your mind.</h2>
 						<p>Let’s turn your ideas into a powerful digital solution with expert planning and execution.
 Share your project with us, and we’ll help bring it to life efficiently and professionally.</p>
-						<p class="mb-0"><a href="#" class="btn btn-white py-3 px-4">Contact me</a></p>
+						<p class="mb-0"><a href="#contact-section" class="btn btn-white py-3 px-4">Contact me</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-end">
@@ -827,11 +830,11 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 					<div class="ftco-footer-widget mb-4 ml-md-4">
 						<h2 class="ftco-heading-2">Links</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Home</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Projects</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
+							<li><a href="#home-section"><span class="fa fa-chevron-right mr-2"></span>Home</a></li>
+							<li><a href="#about-section"><span class="fa fa-chevron-right mr-2"></span>About</a></li>
+							<li><a href="#services-section"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
+							<li><a href="#projects-section"><span class="fa fa-chevron-right mr-2"></span>Projects</a></li>
+							<li><a href="#contact-section"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -859,11 +862,11 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 											class="text">hamzatecksols@gmail.com</span></a></li>
 							</ul>
 						</div>
-						<ul class="ftco-footer-social list-unstyled mt-2">
+						<!-- <ul class="ftco-footer-social list-unstyled mt-2">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
-						</ul>
+						</ul> -->
 					</div>
 				</div>
 			</div>
