--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@ Share your project with us, and we’ll help bring it to life efficiently and pr
 								<li><span class="icon fa fa-map marker"></span><span class="text">Sargodha Pakistan</span></li>
 								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 307 - 1686562
 											</span></a></li>
-								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span
+								<li><a href="mailto:hamzatecksols@gmail.com"><span class="icon fa fa-paper-plane pr-4"></span><span
 											class="text">hamzatecksols@gmail.com</span></a></li>
 							</ul>
 						</div>
